# youtuber

./: .gitignore  EXAMPLES.md  INSTALL.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  REFERENCE.md  pyproject.toml  requirements.txt  setup.ps1  setup.py  setup.sh
tests/: test_youtuber.py
youtuber/: __init__.py  __main__.py  cli.py  collection.py  config.py  downloader.py  logger.py  platform_utils.py
